[package]
name = "utubeget"
version = "0.1.0"
edition = "2021"

[dependencies]
phf = { version = "0.11.1", features = ["macros"] }
anyhow = "^1.0"
log = "^0.4.17"
env_logger = "^0.10.0"
clap = { version = "4.1.4", features = ["derive"] }
rand = "0.8.5"

tokio = { version = "1", features = ["full"] }